tests/conformance/errors/early_error_stack/input.dgm
fn a() {
  undefined_var
}

a()
